<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.AgregarFragment"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />

        <EditText
            android:id="@+id/edt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/item_nombre"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edt_Detalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/item_detalles"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_Ub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/item_ub"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginVertical="10sp"
            android:id="@+id/lay_imga">

            <LinearLayout
                android:id="@+id/lay_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_Img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/item_img"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edt_Tam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/item_tam"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="1"
                android:scrollbarTrackVertical="@drawable/ic_launcher_foreground"
                android:src="@drawable/ic_launcher_background"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:srcCompat="@drawable/ic_launcher_foreground" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginVertical="10sp"
            android:id="@+id/lay_latlng">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Latitud:" />
            <TextView
                android:id="@+id/txt_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="Longitud:" />
            <TextView
                android:id="@+id/txt_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_CRUD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:id="@+id/lay_buttons">

            <Button
                android:id="@+id/btn_borrar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Eliminar" />

            <Button
                android:id="@+id/btn_actualizar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Actualizar" />

            <Button
                android:id="@+id/btn_volver"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Volver" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>